--- a/ds/src/main/res/layout/transaction_container.xml
+++ b/ds/src/main/res/layout/transaction_container.xml
@@ -30,4 +30,14 @@
         tools:listitem="@layout/transaction_item"
         tools:itemCount="10"/>
 
+    <ProgressBar
+        android:id="@+id/transaction_container_progress_bar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:indeterminateTint="@color/ds_color_green"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
